@@ -97,6 +97,7 @@ LIBRPM_0
     rpmdsInit;
     rpmdsIx;
     rpmdsLdconfig;
+    rpmdsMatch;
     rpmdsMerge;
     rpmdsMergePRCO;
     rpmdsN;
